--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,23 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <!--thymeleaf 依赖-->
+
+
+
+        <!--thymeleaf dependency-->
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!--web 依赖-->
+
+
+
+        <!--web dependency-->
+
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,13 +49,23 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
-        <!--mybatisPlus 依赖-->
+
+
+        <!--mybatisPlus dependency-->
+
+
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.3</version>
         </dependency>
-        <!--MySQL 依赖-->
+
+
+        <!--MySQL dependency-->
+
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -58,7 +79,13 @@
 			<version>1.1.14</version>
 		</dependency>
 
-        <!--lombok 依赖-->
+
+
+
+        <!--lombok dependency-->
+
+
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
